create ssh screen
